--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "@storybook/addon-storyshots": "^6.4.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "prop-types": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.1",
+    "react-test-renderer": "^17.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
