--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chromatic": "^6.1.0",
     "prop-types": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
